# INF_A

./: README.md
docs/: coordinate-transform-assumptions.md  ros-topic-contracts.md
ros2_ws/src/infa_inference/: package.xml  setup.cfg  setup.py
ros2_ws/src/infa_inference/infa_inference/: defect_inference_node.py
ros2_ws/src/infa_inference/resource/: infa_inference
ros2_ws/src/infa_inference/test/: test_defect_inference_node.py
ros2_ws/src/infa_mission/: package.xml  setup.cfg  setup.py
ros2_ws/src/infa_mission/infa_mission/: __init__.py  mission_logic.py  mission_node.py
ros2_ws/src/infa_mission/launch/: infa_full_mission_sim.launch.py  infa_mission.launch.py
ros2_ws/src/infa_mission/scripts/: validate_mission_sim.py
ros2_ws/src/infa_safety/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/infa_safety/infa_safety/: __init__.py  mission_state_machine.py  safety_supervisor_node.py
ros2_ws/src/infa_safety/infa_safety/monitors/: __init__.py  power_abort_monitor.py  vio_health_monitor.py  virtual_cage_avoidance.py
ros2_ws/src/infa_slam/: package.xml  setup.cfg  setup.py
ros2_ws/src/infa_slam/infa_slam/: __init__.py  slam_bridge_node.py
ros2_ws/src/infa_slam/launch/: infa_slam.launch.py
ros2_ws/src/infa_sync/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/infa_sync/config/: example_sync.yaml
ros2_ws/src/infa_sync/infa_sync/: __init__.py  sync_node.py  webodm_client.py
ros2_ws/src/infa_sync/resource/: infa_sync
ros2_ws/src/infa_sync/test/: test_webodm_client.py
services/geojson-exporter/: README.md  pyproject.toml
services/geojson-exporter/config/: mapping.example.json
services/geojson-exporter/geojson_exporter/: __init__.py  cli.py  exporter.py
services/geojson-exporter/test/: test_exporter.py
web/dashboard/: README.md  index.html  package.json
web/dashboard/src/: App.tsx
web/dashboard/src/components/: FilterControls.tsx  InteractionPanel.tsx  LoadStateBoundary.tsx  MissionTimeline.tsx  SceneViewport.tsx
web/dashboard/src/data/: mockData.ts
web/dashboard/src/hooks/: useDashboardData.ts
web/dashboard/src/lib/: apiAdapter.ts
web/dashboard/src/styles/: app.css
web/dashboard/src/types/: dashboard.ts
