<?xml version="1.0"?>
<package format="3">
  <name>infa_mission</name>
  <version>0.1.0</version>
  <description>Mission control, standoff lock, and sweep planning for INF-A.</description>
  <maintainer email="dev@infa.local">INF-A Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
