<?xml version="1.0"?>
<package format="3">
  <name>infa_safety</name>
  <version>0.1.0</version>
  <description>Mission preemptive safety supervisor for VIO health, power abort, and virtual cage avoidance.</description>
  <maintainer email="dev@infa.local">INF_A Safety</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
