<?xml version="1.0"?>
<package format="3">
  <name>infa_sync</name>
  <version>0.1.0</version>
  <description>Synchronize completed mission imagery with WebODM reconstructions.</description>
  <maintainer email="dev@infa.local">INF-A Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
